add inspiration from text

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <header>
     <h1>Border Playground</h1>
+    <p>inspiration from </p>
     <h3>CSS for JavaScript Developers</h3>
     <p>by</p>
     <h3>Josh Comeau</h3>
